--- a/DZ/bicycle/css/media.css
+++ b/DZ/bicycle/css/media.css
@@ -173,3 +173,11 @@
 	**
 	 */
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+	main>.content{
+		display: block;
+		width: 100%;
+		height: 100vh;
+	}
+}
