--- a/scroll_paralx/css/style.css
+++ b/scroll_paralx/css/style.css
@@ -32,6 +32,8 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	z-index: -9;
+	transition: left 1s ease-in-out;
 }
 .wrapper {
 	position: relative;
