--- a/weatherapp_land/styles/min_1640.css
+++ b/weatherapp_land/styles/min_1640.css
@@ -1,16 +1,16 @@
 /* **start header section** */
-.logo{
-
-}
+/* .device img, .dwnld_sectn img{
+	width: 100%;
+} */
 /* **end header section** */
 /* **start top section** */
 
-.section__item h2{
+/* .section__item h2{
 	font-size: 2.4em;
 }
 .btn_wrap{
 	width: 100%;
-}
+} */
 
 
 
