--- a/weatherapp_land/styles/main.css
+++ b/weatherapp_land/styles/main.css
@@ -8,10 +8,10 @@ html, body{
 	width: 100%;
 	padding: 0;
 	margin: 0;
-}
-html, body{
 	font-family: 'Ubuntu', sans-serif;
-	/* font-size: 16px; */
+}
+body{
+	position: relative;
 }
 
 header, nav, main, section, footer{
@@ -62,6 +62,95 @@ hr{
 .wrapper{
 	padding: 0 calc(100% / 12);
 }
+/* preloader */
+.preloader{
+	position: fixed;
+	z-index: 1000;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, .7);
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+.preload{
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background: none;
+	border-radius: 50%;
+	margin: auto;
+	position: relative;
+	animation: mymove 2s infinite linear;
+}
+.inset{
+	position: absolute;
+	display: inline-block;
+	width: 50%;
+	height: 50%;
+	border-radius: 50%;
+}
+.inset1{
+	left: -50%;
+	top: -50%;
+	background: #f00;
+	animation: center1 1.2s infinite linear;
+}
+.inset2{
+	left: 100%;
+	top: -50%;
+	background: #0f0;
+	animation: center2 1.2s infinite linear;
+}
+.inset3{
+	left: 100%;
+	top: 100%;
+	background: #ff0;
+	animation: center3 1.2s infinite linear;
+}
+.inset4{
+	top: 100%;
+	left: -50%;
+	background: #00f;
+	animation: center4 1.2s infinite linear;
+}
+
+@keyframes mymove {
+  	   0%   {transform: rotate(0deg);}
+  	  
+     100%   {transform: rotate(360deg);}
+}
+@keyframes center1 {
+	0%  { left: -50%; top:-50%;}
+	25% { left: -25%; top:-25%;}
+	50% { left: 0; top:0;}
+	75% { left: -25%; top:-25%;}
+    100%{ left: -50% ;top:-50%;}
+	}
+	@keyframes center2 {
+	0%  { top: -50%; left:100%;}
+	25% { top: -25%; left:75%;}
+	50% { top: 0%; left:50%;}
+	75% { top: -25%; left:75%;}
+    100%{ top: -50% ; left:100%;}
+	}
+	@keyframes center3 {
+	0%  { left: 100%; top:100%;}
+	25% { left: 75%; top:75%;}
+	50% { left: 50%; top:50%;}
+	75% { left: 75%; top:75%;}
+    100%{ left: 100%; top:100%;}
+	}
+	@keyframes center4 {
+	0%  { top: 100%; left:-50%;}
+	25% { top: 75%; left:-25%;}
+	50% { top: 50%; left:0;}
+	75% { top: 75%; left:-25%;}
+    100%{ top: 100% ;left:-50%;}
+	}
+/* end preloader */
 /* **start header section** */
 header{
 	background: #648cff;
@@ -147,27 +236,27 @@ header{
 	-o-flex-flow: row wrap;
 	flex-flow: row wrap;
 }
-.section__item:first-child{
-	width: calc((100% / 12) * 5);
+.section__item{
+	width: calc((100% / 12) * 6);
 }
-.section__item:nth-child(2){
-	width: calc((100% / 12) * 7);
-}
+
 
 .section__item.view_down{
 	width: 100%;
 }
 .section__item h2{
 	font-size: 3em;
-	margin: 43% 0 10%;
+	margin: 30% 0 10%;
 	color: #fff;
 	font-weight: 700;
+	width: calc((100% / 12) * 10 + 30px);
 }
 .section__item .descr{
 	font-size: 1.125em;
 	margin-bottom: 13%;
 	font-weight: 400;
-	padding-right: 30px;
+	line-height: 30px;
+	width: calc((100% / 12) * 8 + 30px);
 }
 .btn_wrap{
 	display: -webkit-flex;
@@ -197,27 +286,23 @@ header{
 .bnt_dwnld{
 	background: #fc6a42;
 }
-.bnt_dwnld:hover, .bnt_dwnld:focus{
+.bnt_dwnld:hover{
 	background: #fff;
 	color: #fc6a42;
 	border: solid 3px #fc6a42;
 	box-shadow: 0 0 5px 0px #fff;
 }
-.bnt_dwnld:active{
-	border: inset 3px #fc6a42;
-}
+
 .bnt_features{
 	background: #4466c9;
 }
-.bnt_features:hover, .bnt_features:focus{
+.bnt_features:hover{
 	background: #fff;
 	color: #4466c9;
 	border: solid 3px #4466c9;
 	box-shadow: 0 0 5px 0px #fff;
 }
-.bnt_features:active{
-	border: inset 3px #4466c9;
-}
+
 .img_wrap__top-scr{
 	margin-top: 15%;
 }
@@ -264,7 +349,7 @@ header{
 	font-weight: 700;
 	font-size: 2.25em;
 	color:#6ca3ff;
-	margin-bottom: 30px;
+	margin-bottom: 35px;
 }
 .title-sbscr{
 	display: inline-block;
@@ -280,6 +365,7 @@ header{
 	-o-flex-flow: row wrap;
 	flex-flow: row wrap;
 	justify-content: center;
+	margin-bottom: 50px;
 }
 .features-list-item{
 	display: -webkit-flex;
@@ -628,12 +714,13 @@ cite{
 	width: calc((100% / 12) * 6);
 }
 .section__item h2.download_header{
+	width: calc((100% / 12) * 10);
 	text-transform: uppercase;
-	font-size: 2.5em;
+	font-size: 36px;
 	margin: 5% 0 5%;
 }
 .descr.download_descr{
-	padding-right: calc((100% / 12) * 3 + 90px);
+	width: calc((100% / 12) * 8);
 	margin-bottom: 5%;
 }
 .dwnld_sectn{
