--- a/weatherapp_land/styles/max_640.css
+++ b/weatherapp_land/styles/max_640.css
@@ -81,13 +81,15 @@
 .section__item h2{
 	margin-top: 30px;
 	text-align: center;
-	font-size: 1.5em;	
+	font-size: 1.5em;
+	width: 100%;
 }
 .section__item .descr{
 	font-size: 1em;
 	line-height: 40px;
 	text-align: center;
 	padding: 0;
+	width: 100%;
 }
 .img_wrap__top-scr{
 	padding-left: 0;
